--- a/Client/Restaurant.Client/Restaurant/Views/LoginView.xaml
+++ b/Client/Restaurant.Client/Restaurant/Views/LoginView.xaml
@@ -3,18 +3,34 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Restaurant.Views.LoginView">
   <ContentPage.Content>
-    <StackLayout Orientation="Vertical">
-      <StackLayout Orientation="Vertical">
-        <Label Text="Enter your Email Address to Log In:" />
-        <Entry x:Name="Email" HorizontalOptions="FillAndExpand" />
+    <StackLayout Orientation="Vertical" VerticalOptions="Center">
+      <StackLayout Orientation="Vertical" Padding="10">
+        <Entry x:Name="Email" Placeholder="Enter your Email:" HorizontalOptions="FillAndExpand" >
+          <Entry.TextColor>
+            <OnPlatform x:TypeArguments="Color"
+                iOS="Accent"
+                WinPhone="Accent"
+                Android="#afcca6" />
+          </Entry.TextColor>
+        </Entry>
       </StackLayout>
 
-      <StackLayout Orientation="Vertical" Padding="0,16,0,0">
-        <Label Text="Enter password"/>
-        <Entry x:Name="Password" HorizontalOptions="FillAndExpand" IsPassword="true"/>
+      <StackLayout Orientation="Vertical" Padding="10">
+        <Entry x:Name="Password" Placeholder="Enter password" HorizontalOptions="FillAndExpand" IsPassword="true">
+          <Entry.TextColor>
+            <OnPlatform x:TypeArguments="Color"
+                iOS="Accent"
+                WinPhone="Accent"
+                Android="#afcca6" />
+          </Entry.TextColor>
+        </Entry>
       </StackLayout>
 
-      <Button x:Name="Login" Text="Login" Command="{Binding Login}"/>
+      <StackLayout Orientation="Horizontal" Padding="10" HorizontalOptions="Center">
+        <Button x:Name="Login" Text="Login" WidthRequest="150"/>
+        <Button x:Name="OpenRegester" Text="Regester" WidthRequest="150"/>
+      </StackLayout>
+
     </StackLayout>
   </ContentPage.Content>
 </ContentPage>
