Added libs to iOS app and Added Models

--- a/Client/Restaurant.Client/Restaurant/Views/LoginView.xaml
+++ b/Client/Restaurant.Client/Restaurant/Views/LoginView.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Restaurant.Views.LoginView">
+             x:Class="Restaurant.Views.LoginView" BackgroundColor="Gray">
   <ContentPage.Content>
     <StackLayout Orientation="Vertical" VerticalOptions="Center">
       <StackLayout Orientation="Vertical" Padding="10">
