--- a/Client/Restaurant.Client/Restaurant/Pages/AuthenticationPage.xaml
+++ b/Client/Restaurant.Client/Restaurant/Pages/AuthenticationPage.xaml
@@ -14,7 +14,7 @@
       <StackLayout.Padding>
         <OnPlatform x:TypeArguments="Thickness">
           <OnPlatform.iOS>
-            10, 10, 10, 10
+            25, 25, 25, 25
           </OnPlatform.iOS>
           <OnPlatform.Android>
             25, 25, 25, 25
@@ -25,7 +25,7 @@
         </OnPlatform>
       </StackLayout.Padding>
 
-      <StackLayout Orientation="Vertical" Padding="10">
+      <StackLayout Orientation="Vertical" Padding="20">
         <Grid>
           <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto"/>
@@ -38,7 +38,7 @@
                                     Grid.Column="1" VerticalOptions="Center" HorizontalOptions="FillAndExpand" HasBorder="False"/>
         </Grid>
 
-        <ContentView BackgroundColor="{StaticResource redDark}" HorizontalOptions="Fill" >
+        <ContentView BackgroundColor="{StaticResource redPrimary}" HorizontalOptions="Fill" >
           <ContentView.HeightRequest>
             <OnPlatform x:TypeArguments="x:Double" iOS="1"  Android="0"/>
           </ContentView.HeightRequest>
@@ -47,7 +47,7 @@
 
 
 
-      <StackLayout Orientation="Vertical" Padding="10">
+      <StackLayout Orientation="Vertical" Padding="20">
         <Grid>
           <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto"/>
@@ -58,14 +58,14 @@
                                     Placeholder="Enter password" Grid.Column="1"
                                     HorizontalOptions="FillAndExpand" IsPassword="true"/>
         </Grid>
-        <ContentView BackgroundColor="{StaticResource redDark}" HorizontalOptions="Fill" >
+        <ContentView BackgroundColor="{StaticResource redPrimary}" HorizontalOptions="Fill" >
           <ContentView.HeightRequest>
             <OnPlatform x:TypeArguments="x:Double" iOS="1"  Android="0"/>
           </ContentView.HeightRequest>
         </ContentView>
 
       </StackLayout>
-      <StackLayout Orientation="Vertical" Padding="10">
+      <StackLayout Orientation="Vertical" Padding="20">
         <controls:AnimateButton x:Name="Login" Text="Log In" BackgroundColor="{StaticResource redLight}"/>
       </StackLayout>
 
