Added core project and changed UI stuff

--- a/Client/Restaurant.Client/Restaurant/App.xaml
+++ b/Client/Restaurant.Client/Restaurant/App.xaml
@@ -13,7 +13,7 @@
       <Color x:Key="indigoDark">#303F9F</Color>
       <Color x:Key="indigoLight">#C5CAE9</Color>
       <Color x:Key="indigoPinkAccent">#FF4081</Color>
-      
+
 
       <Color x:Key="bluePrimary">#1FAECE</Color>
       <Color x:Key="blueLight">#91E2F4</Color>
@@ -39,6 +39,15 @@
       <Color x:Key="grayLight">#ECF0F1</Color>
       <Color x:Key="grayDark">#76828A</Color>
       <Color x:Key="grayMedium">#9AA4AB</Color>
+
+
+
+      <Color x:Key="bluePinkPrimary">#2196F3</Color>
+      <Color x:Key="bluePinkDark">#1976D2</Color>
+      <Color x:Key="bluePinkLight">#BBDEFB</Color>
+      <Color x:Key="bluePinkAccent">#FF4081</Color>
+
+
 
       <Style x:Key="labelStyle" TargetType="Label">
         <Setter Property="TextColor" Value="White" />
@@ -85,7 +94,7 @@
         <Setter Property="TextColor" Value="White" />
         <Setter Property="FontSize" Value="Medium" />
       </Style>
-      
+
     </ResourceDictionary>
   </Application.Resources>
 </Application>
