--- a/Client/Restaurant.Client/Restaurant/Pages/MainPages/MasterPage.xaml
+++ b/Client/Restaurant.Client/Restaurant/Pages/MainPages/MasterPage.xaml
@@ -1,6 +1,36 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Restaurant.Pages.MainPages.MasterPage">
-  <Label Text="{Binding MainText}" VerticalOptions="Center" HorizontalOptions="Center" />
+             x:Class="Restaurant.Pages.MainPages.MasterPage"
+             xmlns:local="clr-namespace:Restaurant.Pages.MainPages;assembly=Restaurant"
+             xmlns:controls="clr-namespace:Restaurant.Controls;assembly=Restaurant"
+             xmlns:views="clr-namespace:Restaurant.Views;assembly=Restaurant"
+             Icon="ic_menu.png"
+             Title="Master"
+             Padding="40" BackgroundColor="{StaticResource grayLight}">
+  <ContentPage.Padding>
+    <OnPlatform x:TypeArguments="Thickness">
+      <OnPlatform.iOS>
+        0, 0, 0, 0
+      </OnPlatform.iOS>
+      <OnPlatform.Android>
+        0, 0, 0, 0
+      </OnPlatform.Android>
+      <OnPlatform.WinPhone>
+        0, 0, 0, 0
+      </OnPlatform.WinPhone>
+    </OnPlatform>
+  </ContentPage.Padding>
+  <ContentPage.Content>
+    <Grid>
+      <Grid.RowDefinitions>
+        <RowDefinition Height="Auto"/>
+        <RowDefinition Height="*"/>
+      </Grid.RowDefinitions>
+      <views:ProfileStripView Grid.Row="0"/>
+      <StackLayout Grid.Row="1">
+
+      </StackLayout>
+    </Grid>
+  </ContentPage.Content>
 </ContentPage>
