--- a/Client/Restaurant.Client/Restaurant/Pages/AuthenticationPage.xaml
+++ b/Client/Restaurant.Client/Restaurant/Pages/AuthenticationPage.xaml
@@ -1,84 +1,85 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <local:AuthenticationPageXaml xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:Restaurant.Pages;assembly=Restaurant"
-             xmlns:controls="clr-namespace:Restaurant.Controls;assembly=Restaurant"
-             x:Class="Restaurant.Pages.AuthenticationPage">
-  <local:AuthenticationPageXaml.Resources>
-    <ResourceDictionary>
-      <Style TargetType="Label" BasedOn="{StaticResource whiteLabelStyle}" />
-    </ResourceDictionary>
-  </local:AuthenticationPageXaml.Resources>
-  <local:AuthenticationPageXaml.Content>
-    <StackLayout Orientation="Vertical" VerticalOptions="Center">
-      <StackLayout.Padding>
-        <OnPlatform x:TypeArguments="Thickness">
-          <OnPlatform.iOS>
-            25, 25, 25, 25
-          </OnPlatform.iOS>
-          <OnPlatform.Android>
-            25, 25, 25, 25
-          </OnPlatform.Android>
-          <OnPlatform.WinPhone>
-            10, 10, 10, 10
-          </OnPlatform.WinPhone>
-        </OnPlatform>
-      </StackLayout.Padding>
+						 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+						 xmlns:local="clr-namespace:Restaurant.Pages;assembly=Restaurant"
+						 xmlns:controls="clr-namespace:Restaurant.Controls;assembly=Restaurant"
+						 x:Class="Restaurant.Pages.AuthenticationPage">
+	<local:AuthenticationPageXaml.Resources>
+		<ResourceDictionary>
+			<Style TargetType="Label" BasedOn="{StaticResource whiteLabelStyle}" />
+		</ResourceDictionary>
+	</local:AuthenticationPageXaml.Resources>
+	<local:AuthenticationPageXaml.Content>
+		<StackLayout Orientation="Vertical" VerticalOptions="Center" x:Name="uiMain">
+			<StackLayout.Padding>
+				<OnPlatform x:TypeArguments="Thickness">
+					<OnPlatform.iOS>
+						25, 25, 25, 25
+					</OnPlatform.iOS>
+					<OnPlatform.Android>
+						25, 25, 25, 25
+					</OnPlatform.Android>
+					<OnPlatform.WinPhone>
+						10, 10, 10, 10
+					</OnPlatform.WinPhone>
+				</OnPlatform>
+			</StackLayout.Padding>
 
-      <StackLayout Orientation="Vertical" Padding="20">
-        <Grid>
-          <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="*"/>
-          </Grid.ColumnDefinitions>
-          <Image Source="ic_email.png" HeightRequest="25" Grid.Column="0" WidthRequest="25"
-                 VerticalOptions="Center"></Image>
+			<StackLayout Orientation="Vertical" Padding="20" x:Name="emailStack" Scale="0">
+				<Grid>
+					<Grid.ColumnDefinitions>
+						<ColumnDefinition Width="Auto"/>
+						<ColumnDefinition Width="*"/>
+					</Grid.ColumnDefinitions>
+					<Image Source="ic_email.png" HeightRequest="25" x:Name="EmailImage" Grid.Column="0" WidthRequest="25"
+								 VerticalOptions="Center"></Image>
 
-          <controls:RestaurantEntry x:Name="Email" Placeholder="Enter your email" Text="{Binding Email}"
-                                    Grid.Column="1" VerticalOptions="Center" HorizontalOptions="FillAndExpand" HasBorder="False"/>
-        </Grid>
+					<controls:RestaurantEntry x:Name="Email" Placeholder="Enter your email" Text="{Binding Email}"
+																		Grid.Column="1" VerticalOptions="Center" HorizontalOptions="FillAndExpand" HasBorder="False"/>
+				</Grid>
 
-        <ContentView BackgroundColor="{StaticResource redPrimary}" HorizontalOptions="Fill" >
-          <ContentView.HeightRequest>
-            <OnPlatform x:TypeArguments="x:Double" iOS="1"  Android="0"/>
-          </ContentView.HeightRequest>
-        </ContentView>
-      </StackLayout>
+				<ContentView BackgroundColor="{StaticResource redPrimary}" HorizontalOptions="Fill" >
+					<ContentView.HeightRequest>
+						<OnPlatform x:TypeArguments="x:Double" iOS="1"  Android="0"/>
+					</ContentView.HeightRequest>
+				</ContentView>
+			</StackLayout>
 
 
 
-      <StackLayout Orientation="Vertical" Padding="20">
-        <Grid>
-          <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="*"/>
-          </Grid.ColumnDefinitions>
-          <Image Source="ic_key_variant.png" Grid.Column="0" WidthRequest="25" HeightRequest="25" VerticalOptions="Center"></Image>
-          <controls:RestaurantEntry HasBorder="False" x:Name="Password" Text="{Binding Password}"
-                                    Placeholder="Enter password" Grid.Column="1"
-                                    HorizontalOptions="FillAndExpand" IsPassword="true"/>
-        </Grid>
-        <ContentView BackgroundColor="{StaticResource redPrimary}" HorizontalOptions="Fill" >
-          <ContentView.HeightRequest>
-            <OnPlatform x:TypeArguments="x:Double" iOS="1"  Android="0"/>
-          </ContentView.HeightRequest>
-        </ContentView>
+			<StackLayout Orientation="Vertical" Padding="20" x:Name="passwordStack" Scale="0">
+				<Grid>
+					<Grid.ColumnDefinitions>
+						<ColumnDefinition Width="Auto"/>
+						<ColumnDefinition Width="*"/>
+					</Grid.ColumnDefinitions>
+					<Image Source="ic_key_variant.png" Grid.Column="0" x:Name="PasswordImage" WidthRequest="25" HeightRequest="25" VerticalOptions="Center"></Image>
+					<controls:RestaurantEntry HasBorder="False" x:Name="Password" Text="{Binding Password}"
+																		Placeholder="Enter password" Grid.Column="1"
+																		HorizontalOptions="FillAndExpand" IsPassword="true"/>
+				</Grid>
+				<ContentView BackgroundColor="{StaticResource redPrimary}" HorizontalOptions="Fill" >
+					<ContentView.HeightRequest>
+						<OnPlatform x:TypeArguments="x:Double" iOS="1"  Android="0"/>
+					</ContentView.HeightRequest>
+				</ContentView>
 
-      </StackLayout>
-      <StackLayout>
-        <ActivityIndicator  IsRunning="{Binding IsBusy}" Color="White" HorizontalOptions="Center"
+			</StackLayout>
+			
+			<StackLayout Orientation="Vertical" Padding="20" x:Name="loginStack" Scale="0">
+				<controls:AnimateButton x:Name="Login" Text="Log In" Command="{Binding Login}" BackgroundColor="{StaticResource redLight}"/>
+			</StackLayout>
+
+			<StackLayout IsVisible="{Binding IsBusy}">
+				<ActivityIndicator  IsRunning="{Binding IsBusy}" Color="{StaticResource grayDark}" HorizontalOptions="Center"
 					VerticalOptions="EndAndExpand" />
 
-        <Label Text="{Binding AuthenticationStatus, StringFormat='\{0\}...'}" FontSize="Medium"
-					XAlign="Center" YAlign="Center" VerticalOptions="EndAndExpand" Style="{StaticResource whiteLabelStyle}"/>
+				<Label Text="{Binding AuthenticationStatus, StringFormat='Please wait \{0\}'}" FontSize="14"
+					XAlign="Center" YAlign="Center" VerticalOptions="EndAndExpand" Style="{StaticResource whiteLabelStyle}" TextColor="{StaticResource grayPrimary}"/>
 
-      </StackLayout>
-      <StackLayout Orientation="Vertical" Padding="20">
-        <controls:AnimateButton x:Name="Login" Text="Log In" Command="{Binding Login}" BackgroundColor="{StaticResource redLight}"/>
-      </StackLayout>
+			</StackLayout>
 
-
-    </StackLayout>
-  </local:AuthenticationPageXaml.Content>
+		</StackLayout>
+	</local:AuthenticationPageXaml.Content>
 
 </local:AuthenticationPageXaml>
