Finished order stuf from food Page and added OrdersPage

--- a/Client/Restaurant.Client/Restaurant/Pages/MainPage.xaml
+++ b/Client/Restaurant.Client/Restaurant/Pages/MainPage.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <local:MainPageXaml xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Restaurant.Pages.MainPages.MainPage"
-             xmlns:local="clr-namespace:Restaurant.Pages.MainPages;assembly=Restaurant"
+             x:Class="Restaurant.Pages.MainPage"
+             xmlns:local="clr-namespace:Restaurant.Pages;assembly=Restaurant"
              xmlns:controls="clr-namespace:Restaurant.Controls;assembly=Restaurant">
 </local:MainPageXaml>
