--- a/Client/Restaurant.Client/Restaurant/Pages/FoodsPage.xaml
+++ b/Client/Restaurant.Client/Restaurant/Pages/FoodsPage.xaml
@@ -6,7 +6,7 @@
              xmlns:controls="clr-namespace:Restaurant.Controls;assembly=Restaurant"
              xmlns:views="clr-namespace:Restaurant.Views;assembly=Restaurant">
   <local:FoodsXamlPage.ToolbarItems>
-    <ToolbarItem Text="{Binding MainViewModel.OrdersCount, StringFormat='Orders(\{0\})'}" x:Name="orderToolbar"/>
+    <ToolbarItem Text="{Binding MainViewModel.OrderViewModel.OrdersCount, StringFormat='Basket(\{0\})'}" ClassId="basket" Command="{Binding OpenOrder}" x:Name="orderToolbar"/>
   </local:FoodsXamlPage.ToolbarItems>
   <local:FoodsXamlPage.Content>
     <views:FoodsListView ItemsSource="{Binding Foods}" x:Name="list"/>
