--- a/Client/Restaurant.Client/Restaurant/Pages/BasketPage.xaml
+++ b/Client/Restaurant.Client/Restaurant/Pages/BasketPage.xaml
@@ -4,33 +4,70 @@
 						 x:Class="Restaurant.Pages.BasketPage"
 						 xmlns:local="clr-namespace:Restaurant.Pages;assembly=Restaurant"
 						 xmlns:imagecontrol="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin.Abstractions">
-	<local:BasketPageXaml.Content>
-		<Grid>
-			<Grid.RowDefinitions>
-				<RowDefinition Height="Auto"/>
-				<RowDefinition Height="*"/>
-			</Grid.RowDefinitions>
-			<StackLayout Grid.Row="0" BackgroundColor="{StaticResource greenPrimary}" HeightRequest="80">
-				<AbsoluteLayout VerticalOptions="FillAndExpand"
+  <local:BasketPageXaml.Content>
+    <Grid>
+      <Grid.RowDefinitions>
+        <RowDefinition Height="Auto"/>
+        <RowDefinition Height="*"/>
+        <RowDefinition Height="Auto"/>
+      </Grid.RowDefinitions>
+      <StackLayout Grid.Row="0" BackgroundColor="{StaticResource greenPrimary}" HeightRequest="80">
+        <AbsoluteLayout VerticalOptions="FillAndExpand"
 												HorizontalOptions="FillAndExpand">
-					<StackLayout AbsoluteLayout.LayoutFlags="All" Padding="20" AbsoluteLayout.LayoutBounds="1,0,.5,1">
-						<StackLayout HorizontalOptions="End">
-							<Label Text="Total"/>
-							<Label Text="Rs. 1200" FontSize="Large"/>
-						</StackLayout>
-					</StackLayout>
-					<StackLayout AbsoluteLayout.LayoutFlags="All" AbsoluteLayout.LayoutBounds="0,0,.5,1" Padding="20, 30">
-						<imagecontrol:CircleImage Aspect="Fill"
+          <StackLayout AbsoluteLayout.LayoutFlags="All" Padding="20" AbsoluteLayout.LayoutBounds="1,0,.5,1">
+            <StackLayout HorizontalOptions="End">
+              <Label Text="Total"/>
+              <Label Text="Rs. 1200" FontSize="Large"/>
+            </StackLayout>
+          </StackLayout>
+          <StackLayout AbsoluteLayout.LayoutFlags="All" AbsoluteLayout.LayoutBounds="0,0,.5,1" Padding="20, 30">
+            <imagecontrol:CircleImage Aspect="Fill" BorderThickness="1" BorderColor="{StaticResource grayPrimary}"
 																			WidthRequest="70"
 																			HeightRequest="70" Source="noavatar.png"
 																			HorizontalOptions="Start" VerticalOptions="Start"/>
-					</StackLayout>
+          </StackLayout>
 
-				</AbsoluteLayout>
-			</StackLayout>
-			<StackLayout Grid.Row="1">
-				<ListView></ListView>
-			</StackLayout>
-		</Grid>
-	</local:BasketPageXaml.Content>
+        </AbsoluteLayout>
+      </StackLayout>
+      <StackLayout Grid.Row="1" Padding="0,18,0,0">
+        <StackLayout Padding="10">
+          <Label Text="Your orders:" Style="{StaticResource header}"></Label>
+        </StackLayout>
+        <ListView SeparatorColor="{StaticResource grayLight}" x:Name="orders" ItemsSource="{Binding Orders}" RowHeight="65">
+          <ListView.ItemTemplate>
+            <DataTemplate>
+              <ViewCell>
+                <ViewCell.View>
+                  <Grid StyleId="ordersRoot">
+                    <StackLayout Padding="24,16,16,16" Spacing="20" Orientation="Horizontal" VerticalOptions="Center">
+
+                      <StackLayout Spacing="20" Orientation="Horizontal">
+                        <AbsoluteLayout HorizontalOptions="Start" VerticalOptions="Center">
+                          <imagecontrol:CircleImage WidthRequest="50" HeightRequest="50" Source="{Binding Food.ImageUrl}"
+                            HorizontalOptions="Center" VerticalOptions="Center" Aspect="AspectFill"
+                            AbsoluteLayout.LayoutFlags="PositionProportional" AbsoluteLayout.LayoutBounds=".5,.5,-1,-1" />
+                        </AbsoluteLayout>
+
+                        <StackLayout Spacing="0" VerticalOptions="Center">
+                          <Label Text="{Binding Food.Name}" FontSize="Medium" LineBreakMode="TailTruncation" TextColor="{StaticResource grayDark}"/>
+                          <Label Text="{Binding Food.Quantity,StringFormat='Quantity \{0\}'}" FontSize="Micro" TextColor="{StaticResource grayPrimary}"  LineBreakMode="TailTruncation" />
+                        </StackLayout>
+                      </StackLayout>
+
+                      <StackLayout HorizontalOptions="EndAndExpand" Spacing="20">
+                        <Label Text="{Binding Food.TotalPrice, StringFormat='Rs. \{0\}'}" FontSize="Medium"  VerticalOptions="Center" TextColor="{StaticResource grayDark}" />
+                      </StackLayout>
+                    </StackLayout>
+                  </Grid>
+                </ViewCell.View>
+              </ViewCell>
+            </DataTemplate>
+          </ListView.ItemTemplate>
+        </ListView>
+      </StackLayout>
+      <StackLayout Grid.Row="2" Padding="10, 5,10,10">
+        <Button Text="Complete your orders"></Button>
+      </StackLayout>
+    </Grid>
+  </local:BasketPageXaml.Content>
 </local:BasketPageXaml>
