--- a/Client/Restaurant.Client/Restaurant/Pages/MasterPage.xaml
+++ b/Client/Restaurant.Client/Restaurant/Pages/MasterPage.xaml
@@ -2,13 +2,13 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Restaurant.Pages.MasterPage"
-             xmlns:local="clr-namespace:Restaurant.Pages.MainPages;assembly=Restaurant"
+             xmlns:local="clr-namespace:Restaurant.Pages;assembly=Restaurant"
              xmlns:controls="clr-namespace:Restaurant.Controls;assembly=Restaurant"
              xmlns:views="clr-namespace:Restaurant.Views;assembly=Restaurant"
              xmlns:image="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin.Abstractions"
              Icon="ic_menu_white.png"
              Title="Master"
-             Padding="40" BackgroundColor="{StaticResource grayLight}">
+             BackgroundColor="{StaticResource grayLight}">
   <ContentPage.Padding>
     <OnPlatform x:TypeArguments="Thickness">
       <OnPlatform.iOS>
@@ -36,7 +36,7 @@
          </ListView.SeparatorColor>
           <ListView.ItemTemplate>
             <DataTemplate>
-              <ViewCell>
+              <ViewCell Tapped="Cell_Tapped">
                 <ViewCell.View>
                   <StackLayout StyleId="test">
                     <Grid>
@@ -45,7 +45,7 @@
                         <ColumnDefinition Width="*"/>
                       </Grid.ColumnDefinitions>
                       <StackLayout Padding="10">
-                        <Image HorizontalOptions="End"
+                        <Image HorizontalOptions="End" Opacity=".3"
                                           VerticalOptions="Center"                                         
                                           WidthRequest="25"
                                           HeightRequest="25"
