--- a/Client/Restaurant.Client/Restaurant/Pages/BasketPage.xaml
+++ b/Client/Restaurant.Client/Restaurant/Pages/BasketPage.xaml
@@ -1,9 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <local:BasketPageXaml xmlns="http://xamarin.com/schemas/2014/forms"
-						 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-						 x:Class="Restaurant.Pages.BasketPage"
-						 xmlns:local="clr-namespace:Restaurant.Pages;assembly=Restaurant"
-						 xmlns:imagecontrol="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin.Abstractions">
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             x:Class="Restaurant.Pages.BasketPage"
+             xmlns:local="clr-namespace:Restaurant.Pages;assembly=Restaurant"
+             xmlns:imagecontrol="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin.Abstractions">
+  <local:BasketPage.ToolbarItems>
+    <ToolbarItem Text="Edit"/>
+  </local:BasketPage.ToolbarItems>
   <local:BasketPageXaml.Content>
     <Grid>
       <Grid.RowDefinitions>
@@ -13,7 +16,7 @@
       </Grid.RowDefinitions>
       <StackLayout Grid.Row="0" BackgroundColor="{StaticResource greenPrimary}" HeightRequest="80">
         <AbsoluteLayout VerticalOptions="FillAndExpand"
-												HorizontalOptions="FillAndExpand">
+                        HorizontalOptions="FillAndExpand">
           <StackLayout AbsoluteLayout.LayoutFlags="All" Padding="20" AbsoluteLayout.LayoutBounds="1,0,.5,1">
             <StackLayout HorizontalOptions="End">
               <Label Text="Total"/>
@@ -22,9 +25,9 @@
           </StackLayout>
           <StackLayout AbsoluteLayout.LayoutFlags="All" AbsoluteLayout.LayoutBounds="0,0,.5,1" Padding="20, 30">
             <imagecontrol:CircleImage Aspect="Fill" BorderThickness="1" BorderColor="{StaticResource grayPrimary}"
-																			WidthRequest="70"
-																			HeightRequest="70" Source="noavatar.png"
-																			HorizontalOptions="Start" VerticalOptions="Start"/>
+                                      WidthRequest="70"
+                                      HeightRequest="70" Source="noavatar.png"
+                                      HorizontalOptions="Start" VerticalOptions="Start"/>
           </StackLayout>
 
         </AbsoluteLayout>
@@ -50,12 +53,12 @@
 
                         <StackLayout Spacing="0" VerticalOptions="Center">
                           <Label Text="{Binding Food.Name}" FontSize="Medium" LineBreakMode="TailTruncation" TextColor="{StaticResource grayDark}"/>
-                          <Label Text="{Binding Food.Quantity,StringFormat='Quantity \{0\}'}" FontSize="Micro" TextColor="{StaticResource grayPrimary}"  LineBreakMode="TailTruncation" />
+                          <Label Text="{Binding Quantity,StringFormat='Quantity \{0\}'}" FontSize="Micro" TextColor="{StaticResource grayPrimary}"  LineBreakMode="TailTruncation" />
                         </StackLayout>
                       </StackLayout>
 
                       <StackLayout HorizontalOptions="EndAndExpand" Spacing="20">
-                        <Label Text="{Binding Food.TotalPrice, StringFormat='Rs. \{0\}'}" FontSize="Medium"  VerticalOptions="Center" TextColor="{StaticResource grayDark}" />
+                        <Label Text="{Binding TotalPrice, StringFormat='Rs. \{0\}'}" FontSize="Medium"  VerticalOptions="Center" TextColor="{StaticResource grayDark}" />
                       </StackLayout>
                     </StackLayout>
                   </Grid>
