--- a/Client/Restaurant.Client/Restaurant.Droid/Resources/layout/toolbar.axml
+++ b/Client/Restaurant.Client/Restaurant.Droid/Resources/layout/toolbar.axml
@@ -3,7 +3,6 @@
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:minHeight="?android:attr/actionBarSize"
-    android:background="?android:attr/colorPrimary"
-    android:theme="@android:style/ThemeOverlay.Material.Dark.ActionBar"
-    android:popupTheme="@android:style/ThemeOverlay.Material.Light" />
+    android:background="?attr/colorPrimary"
+    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+    android:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
