--- a/Client/Restaurant.Client/Restaurant/Pages/Welcome/WelcomeStartPage.xaml
+++ b/Client/Restaurant.Client/Restaurant/Pages/Welcome/WelcomeStartPage.xaml
@@ -19,12 +19,12 @@
 
 			<StackLayout x:Name="buttonStack" Spacing="0" Scale="0" VerticalOptions="End" Grid.Row="2">
 				
-					<controls:AnimateButton x:Name="btnAuthenticate" StyleId="authButton" Text="Sign In" Command="{Binding OpenLogin}" BackgroundColor="{StaticResource blueLight}" TextColor="White"/>
+					<controls:AnimateButton x:Name="btnAuthenticate" StyleId="authButton" Text="Sign In" Command="{Binding GoLogin}" BackgroundColor="{StaticResource blueLight}" TextColor="White"/>
 
 			</StackLayout>
       
 			<StackLayout Grid.Row="3" x:Name="signUpStack">       
-				<Button x:Name="SignUpButton" Text="Sign Up" Command="{Binding OpenRegester}" FontSize="14" TextColor="White" HorizontalOptions="Center" BackgroundColor="Transparent" />
+				<Button x:Name="SignUpButton" Text="Sign Up" Command="{Binding GoRegister}" FontSize="14" TextColor="White" HorizontalOptions="Center" BackgroundColor="Transparent" />
 			</StackLayout>
 		</Grid>
 
