--- a/Client/Restaurant.Client/Restaurant/Pages/MasterPage.xaml
+++ b/Client/Restaurant.Client/Restaurant/Pages/MasterPage.xaml
@@ -6,6 +6,7 @@
              xmlns:controls="clr-namespace:Restaurant.Controls;assembly=Restaurant"
              xmlns:views="clr-namespace:Restaurant.Views;assembly=Restaurant"
              xmlns:image="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin.Abstractions"
+             xmlns:system="clr-namespace:System;assembly=System.Runtime"
              Icon="ic_menu_white.png"
              Title="Master"
              BackgroundColor="{StaticResource grayLight}">
