--- a/Client/Restaurant.Client/Restaurant/Pages/Welcome/WelcomeStartPage.xaml
+++ b/Client/Restaurant.Client/Restaurant/Pages/Welcome/WelcomeStartPage.xaml
@@ -2,31 +2,46 @@
 <local:WelcomeStartPageXaml xmlns="http://xamarin.com/schemas/2014/forms"
 						 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
 						 xmlns:local="clr-namespace:Restaurant.Pages;assembly=Restaurant"
-						 xmlns:controls="clr-namespace:Restaurant.Controls;assembly=Restaurant"
+	xmlns:xfg="clr-namespace:XFGloss;assembly=XFGloss"
+                            
+                            xmlns:controls="clr-namespace:Restaurant.Controls;assembly=Restaurant"
 						 x:Class="Restaurant.Pages.WelcomeStartPage">
 
-	<local:WelcomeStartPageXaml.Content>
-		<Grid VerticalOptions="Fill" HorizontalOptions="Fill" Padding="24" x:Name="mainGrid">
-			<StackLayout x:Name="label1" Padding="24,0" Scale="0" VerticalOptions="Center">
-				<Label StyleId="label1" Style="{StaticResource whiteLabelStyle}" 
+  <xfg:ContentPageGloss.BackgroundGradient>
+    <xfg:Gradient Rotation="150">
+        <xfg:GradientStep StepColor="#03A9F4" StepPercentage="0" />
+      <xfg:GradientStep StepColor="#475CDC" StepPercentage="1" />
+    </xfg:Gradient>
+  </xfg:ContentPageGloss.BackgroundGradient>
+
+  <local:WelcomeStartPageXaml.Content>
+    <Grid VerticalOptions="Fill" HorizontalOptions="Fill" Padding="24" x:Name="mainGrid">
+        <Grid.RowDefinitions>
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+        </Grid.RowDefinitions>
+        <StackLayout x:Name="label1" Padding="24,0" Scale="0" VerticalOptions="Center">
+        <Label StyleId="label1" Style="{StaticResource whiteLabelStyle}"
                Text="It looks like this is your first time challenging our restaurant service. Let's get you registered, guest!"
-					FontSize="Medium" XAlign="Center" />
-			</StackLayout>
+					FontSize="Medium" HorizontalTextAlignment="Center" />
+      </StackLayout>
 
-			<StackLayout x:Name="label2" Grid.Row="1" Padding="24,0" Scale="0" VerticalOptions="Center">
-				<Label StyleId="label2" Text="First thing's first, you must log into the our service." Style="{StaticResource whiteLabelStyle}" FontSize="Medium" XAlign="Center" />
-			</StackLayout>
+      <StackLayout x:Name="label2" Grid.Row="1" Padding="24,0" Scale="0" VerticalOptions="Center">
+        <Label StyleId="label2" Text="First thing's first, you must log into the our service." Style="{StaticResource whiteLabelStyle}" FontSize="Medium" HorizontalTextAlignment="Center" />
+      </StackLayout>
 
-			<StackLayout x:Name="buttonStack" Spacing="0" Scale="0" VerticalOptions="End" Grid.Row="2">
-				
-					<controls:AnimateButton x:Name="btnAuthenticate" StyleId="authButton" Text="Sign In" Command="{Binding GoLogin}" BackgroundColor="{StaticResource blueLight}" TextColor="White"/>
+      <StackLayout x:Name="buttonStack" Spacing="0" Scale="0" VerticalOptions="End" Grid.Row="2" Margin="5">
 
-			</StackLayout>
-      
-			<StackLayout Grid.Row="3" x:Name="signUpStack">       
-				<Button x:Name="SignUpButton" Text="Sign Up" Command="{Binding GoRegister}" FontSize="14" TextColor="White" HorizontalOptions="Center" BackgroundColor="Transparent" />
-			</StackLayout>
-		</Grid>
+        <controls:FlatButton x:Name="btnAuthenticate" StyleId="authButton" Text="Sign In" Command="{Binding GoLogin}" BackgroundColor="#FC3491CE" TextColor="White"/>
 
-	</local:WelcomeStartPageXaml.Content>
+      </StackLayout>
+
+      <StackLayout Grid.Row="3" x:Name="signUpStack" Margin="5">
+        <controls:FlatButton x:Name="SignUpButton" Text="Sign Up" Command="{Binding GoRegister}" TextColor="White" BackgroundColor="#F70073BE" />
+      </StackLayout>
+    </Grid>
+
+  </local:WelcomeStartPageXaml.Content>
 </local:WelcomeStartPageXaml>
