--- a/Client/Restaurant.Client/Restaurant/Views/ProfileStripView.xaml
+++ b/Client/Restaurant.Client/Restaurant/Views/ProfileStripView.xaml
@@ -1,27 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://xamarin.com/schemas/2014/forms"
-						 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-						 x:Class="Restaurant.Views.ProfileStripView"
-						 xmlns:controls="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin.Abstractions"
-						 BackgroundColor="{StaticResource grayLight}">
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:controls="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin.Abstractions"
+             x:Class="Restaurant.Views.ProfileStripView">
 
-	<Grid x:Name="root">
-		<BoxView BackgroundColor="{StaticResource redLight}" HeightRequest="80" VerticalOptions="Start"/>
+    <Grid x:Name="root">
+        <!--<Image Source="menu_back.jpg"></Image>-->
 
-		<StackLayout Orientation="Horizontal" Spacing="20" HorizontalOptions="Start" Padding="10,18,0,20">
-			<ContentView Padding="0,20,0,0">
-				<controls:CircleImage Source="{Binding User.Picture}"
-					HorizontalOptions="End" VerticalOptions="Center" Aspect="AspectFill" WidthRequest="70" HeightRequest="70" />
-			</ContentView>  
+        <StackLayout Orientation="Horizontal" HorizontalOptions="Start" Spacing="20" Padding="10, 70,10,10">
+            <controls:CircleImage Source="https://media.licdn.com/mpr/mpr/shrinknp_100_100/AAEAAQAAAAAAAAmKAAAAJDE4OGFkYzA4LWFkMTYtNDE5YS05NDZmLTBhZGNhMzc0Y2Q5Mg.jpg"
+					HorizontalOptions="Start" VerticalOptions="Start" Aspect="AspectFill" WidthRequest="70" HeightRequest="70" />
 
-			<StackLayout Padding="0,15,0,0" HorizontalOptions="Start" VerticalOptions="Start">
-				<Label Text="{Binding User.Name}" FontSize="Small" HorizontalOptions="StartAndExpand" Style="{StaticResource header}" />
-				<Label Text="{Binding User.Email}" FontSize="Micro" HorizontalOptions="StartAndExpand"  />
-
-				<ContentView Padding="0,15,0,0">
-					<Label Text="Alias" FontSize="Small" TextColor="Black"/>
-				</ContentView>
-			</StackLayout>
-		</StackLayout>
-	</Grid>
+            <StackLayout Padding="0,15,0,0" HorizontalOptions="Start" VerticalOptions="Start">
+                <Label Text="Jurabek Azizkhujaev" FontSize="14" HorizontalOptions="StartAndExpand" Style="{StaticResource header}" />
+                <Label Text="jurabek@gmail.com" FontSize="12" HorizontalOptions="StartAndExpand"  />
+            </StackLayout>
+        </StackLayout>
+    </Grid>
 </ContentView>
