some logic changes

--- a/Client/Restaurant.Client/Restaurant/Pages/FoodDetailPage.xaml
+++ b/Client/Restaurant.Client/Restaurant/Pages/FoodDetailPage.xaml
@@ -3,4 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:pages="clr-namespace:Restaurant.Pages;assembly=Restaurant"
              x:Class="Restaurant.Pages.FoodDetailPage">
+  <Grid>
+    <ScrollView>
+      <Image Source="{Binding SelectedFood.Picture}"></Image>
+    </ScrollView>
+  </Grid>
 </pages:FoodDetailPageXaml>
