--- a/Client/Restaurant.Client/Restaurant/Pages/FoodDetailPage.xaml
+++ b/Client/Restaurant.Client/Restaurant/Pages/FoodDetailPage.xaml
@@ -2,10 +2,40 @@
 <pages:FoodDetailPageXaml xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:pages="clr-namespace:Restaurant.Pages;assembly=Restaurant"
-             x:Class="Restaurant.Pages.FoodDetailPage">
-  <Grid>
-    <ScrollView>
-      <Image Source="{Binding SelectedFood.Picture}"></Image>
-    </ScrollView>
-  </Grid>
+             xmlns:local="clr-namespace:Restaurant.Converters;assembly=Restaurant"
+						 xmlns:controls="clr-namespace:Restaurant.Controls;assembly=Restaurant"
+                          x:Class="Restaurant.Pages.FoodDetailPage" BackgroundColor="{StaticResource grayLight}">
+  <ScrollView x:Name="scrollView">
+    <Grid VerticalOptions="Fill">
+      <Grid.RowDefinitions>
+        <RowDefinition Height="Auto"/>
+        <RowDefinition Height="*"/>
+        <RowDefinition Height="Auto"/>
+      </Grid.RowDefinitions>
+      <ContentView Padding="0,0,0,0">
+        <Image x:Name="photoImage" Source="{Binding SelectedFood.Picture}" Aspect="AspectFill"
+               HeightRequest="200" VerticalOptions="Center"
+               HorizontalOptions="Fill"/>
+
+      </ContentView>
+      <StackLayout Grid.Row="1" Orientation="Vertical" Spacing="14" VerticalOptions="Fill" BackgroundColor="{StaticResource grayLight}">
+        <AbsoluteLayout Padding="24,8,24,0">
+          <Label Text="{Binding SelectedFood.Name}" TextColor="{StaticResource asphaltPrimary}" FontSize="Large" VerticalOptions="CenterAndExpand" />
+          <Label Text="{Binding SelectedFood.Description}" TextColor="{StaticResource asphaltPrimary}" FontSize="Small" VerticalOptions="CenterAndExpand" />
+        </AbsoluteLayout>
+        <Grid>
+          <StackLayout>
+            <Label Text="{Binding }"></Label>
+            <Stepper></Stepper>
+            
+          </StackLayout>
+        </Grid>
+
+      </StackLayout>
+      <StackLayout Grid.Row="2">
+        <controls:FlatButton Text="Add to basket"></controls:FlatButton>
+      </StackLayout>
+    </Grid>
+
+  </ScrollView>
 </pages:FoodDetailPageXaml>
